engr441/while-infer/tests/invalid-deadcode/UnreachableCode_Invalid_2.while
bool sign(int x) {
    if(x >= 0) {
	return true;
    } else {
	return false;
    }
    return true;
}
